# obj_viewer

./: Cargo.toml
rsc/shader/: basic_shader.fs  basic_shader.vs  mono_shader.fs  mono_shader.vs  shading_shader.fs  shading_shader.vs
src/: camera.rs  display.rs  lib.rs  main.rs  model.rs  shader.rs  vertex.rs
