[package]
name = "obj_viewer"
version = "0.1.0"
authors = ["Tomo <eyixw.3mke3xd@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
c_str_macro = "1.0.3"
cgmath = "0.18.0"
chrono = "0.4.19"
gl = "0.14.0"
image = "0.22.3"
imgui = "0.7.0"
imgui-opengl-renderer = "0.11.0"
imgui-sdl2 = "0.14.0"
sdl2 = "0.34.5"
indicatif = "0.16.2"